--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,13 @@
-authors = ["Jesus Mejia <jesusmejded@gmail.com>"]
 name = "Bilevel"
 uuid = "345d3ba6-d16c-11e8-3a43-33eb7bceec82"
+authors = ["Jesus Mejia <jesusmejded@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 julia = "1.0"
