--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,14 @@ authors = ["Jesus Mejia <jesusmejded@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Metaheuristics = "0af55e54-742f-56d6-9f1a-37bcdd3b6c50"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 julia = "1.0"
