--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Bilevel"
 uuid = "345d3ba6-d16c-11e8-3a43-33eb7bceec82"
 authors = ["Jesus Mejia <jesusmejded@gmail.com>"]
-version = "0.2.7"
+version = "0.2.8"
 
 [deps]
 Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
@@ -11,6 +11,7 @@ Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
